--- a/index.html
+++ b/index.html
@@ -432,10 +432,12 @@
                             <span>Powered by</span>
                             <img src="imgs/vtex_footer.png">
                         </div>
+                        <!--
                         <div class="">
                             <span>Developed by</span>
-                            <img src="imgs/maeztra_logo.png">
+                            <img src="">
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
